<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <scm>
      <url>https://github.com/kiatt210/AutoDownloader.git</url>
      <connection>scm:git:https://github.com/kiatt210/AutoDownloader.git</connection>
      <developerConnection>scm:git:https://github.com/kiatt210/AutoDownloader.git</developerConnection> 
    <tag>AutoDownloader-1.15</tag>
  </scm>
    <groupId>hu.kiss.seeder</groupId>
    <artifactId>AutoDownloader</artifactId>
    <version>1.28-SNAPSHOT</version>
    <properties>
             <junit.version>5.10.2</junit.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
		<version>3.12.1</version>
                <configuration>
                  <source>19</source>
                  <target>19</target>
                </configuration>
            </plugin>
	    <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-install-plugin</artifactId>
	      <version>3.1.1</version>
	      <configuration>
		<groupId>com.git.hub</groupId>
		<artifactId>jBittorentAPI</artifactId>
		<version>1.0.0</version>
		<packaging>jar</packaging>
		<file>${basedir}/lib/jBittorentAPI-1.0.0.jar</file>
		<generatePom>true</generatePom>
	      </configuration>
	      <executions>
		<execution>
		  <id>install-jar-lib</id>
		  <goals>
		    <goal>install-file</goal>
		  </goals>
		  <phase>validate</phase>
		</execution>
	      </executions>
	    </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>hu.kiss.seeder.run.Runner</mainClass>
                            <classpathPrefix>libs/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/libs/</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                  <argLine>--enable-preview</argLine>
		  <excludes>
		    <exclude>**/NcoreTest.java</exclude>
		    <exclude>**/DelugeRPCClientTest.java</exclude>
		    <exclude>**/PahoClientTest.java</exclude>
		  </excludes>
                </configuration>		
            </plugin>
	    <plugin>
	      <artifactId>exec-maven-plugin</artifactId>
	      <groupId>org.codehaus.mojo</groupId>
	      <executions>
		<execution>
		  <id>Docker image build</id>
		  <phase>deploy</phase>
		  <goals>
		    <goal>exec</goal>
		  </goals>
		  <configuration>
		    <executable>${basedir}/docker_build.sh</executable>
		    <arguments>
		      <argument>${project.build.finalName}.jar</argument>
		      <argument>${project.version}</argument>
		    </arguments>
		  </configuration>
		</execution>
	      </executions>
	    </plugin>
	    <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-release-plugin</artifactId>
	      <configuration>
		    <checkModificationExcludes>
		      <checkModificationExclude>pom.xml</checkModificationExclude>
		    </checkModificationExcludes>
	      </configuration>
	    </plugin>
	    <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-deploy-plugin</artifactId>
	      <configuration>
		<skip>true</skip>
	      </configuration>
	    </plugin>

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.4.15</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.15.3</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.git.hub</groupId>
            <artifactId>jBittorentAPI</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>4.8.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.13.4</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.4.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.paho</groupId>
            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.19.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.19.0</version>
        </dependency>
	<dependency>
	  <groupId>org.xerial</groupId>
	  <artifactId>sqlite-jdbc</artifactId>
	  <version>3.45.3.0</version>
	</dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
        </dependency>


    </dependencies>
</project>
